--- a/front/app/src/app/app.component.css
+++ b/front/app/src/app/app.component.css
@@ -17,8 +17,8 @@ body {
 }
 
 button {
-    background-color: #ff0a00;
-    border: 2px solid #ff0a00;
+    background-color: #070606;
+    border: 2px solid #141414;
     border-radius: 10px;
     color: #fff;
     font-size: 17px;
@@ -26,7 +26,7 @@ button {
 
 .container {
     background-color: #fff;
-    border: 1px solid black;
+    border: 1px solid rgb(247, 23, 23);
     border-radius: 10px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
     width: 400px;
